--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,11 +25,6 @@ android {
 }
 
 
-
-
-
-
-
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -43,11 +38,10 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.4.0'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
     compile 'com.google.code.gson:gson:2.6.2'
-//    compile 'com.journeyapps:zxing-android-legacy:2.0.1@aar'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.0.2'
-//    compile 'me.sudar:zxing-orient:2.1.1@aar'
-    testCompile 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12' 
+    compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.baoyz.swipemenulistview:library:1.3.0'
