--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
 
 repositories {
     maven { url "https://jitpack.io" }
+    mavenCentral()
 }
 
 dependencies {
@@ -54,6 +55,16 @@ dependencies {
     compile 'com.google.firebase:firebase-core:10.2.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
     compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+    compile 'de.hdodenhof:circleimageview:2.2.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'net.gotev:uploadservice:2.1'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'javax.annotation:javax.annotation-api:1.2'
+    compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
+
+group 'pushnotification'
+version '1.0-SNAPSHOT'
+sourceCompatibility = 1.8
